Phase 4.5 Part-D — CPU path clean by construction; physical-scale poison HITs
Two go/no-go confirmations before deciding whether Phase 4.5 can pass
the stale-mirror finding by.

Part 1: CPU path is structurally clean. The retirement of per-step
recomputeDerivedSoA happens by replacing the whole moveThing dispatch
on the GPU path (BoxOfActin.java:1037-1059), not by gating a skip
inside the CPU branch. On non-`-gpu` runs, Env.moveStart threadsets
dispatch Thing.moveThing() → initialize() → recomputeDerivedSoA every
step, unconditionally. Staleness phenomenon cannot occur off-GPU.

Part 2: Added BOA_PHASE45_POISON_MODE=fixed (and POISON_OFFSET) to
GPUMoveThing.poisonFrameOnlyMirrors. In fixed mode, call
refreshHostMirrorsForOutput first (restores mirrors to truth), then
add a single offset — net staleness vs truth = exactly the offset each
step, no accumulation. Single-seed three-point probe + refresh-only
control (glidingAssay500_val seed=1):

  clean              bindEvents=482 mbm=5.14 gv=7.15
  fixed offset=0     bindEvents=677 mbm=6.69 gv=7.97  (refresh-only)
  fixed offset=0.01  bindEvents=306 mbm=2.93 gv=5.16  (the probe)
  accum offset=1.0   bindEvents=127 mbm=1.04 gv=11.51 (positive control)

Against the refresh-only control, +0.01 µm (~one monomer) drops
bindEvents 55%, well outside the ±24% same-seed noise band.

Decision: HIT at physical scale → cannot pass it by. Next target is
the device-bound binding-input buffers (filEnd1/filEnd2/motPos pack in
GPUMotorBinding), consistent with the 9eb494b propagation trace
showing soaEnd1[] does not reach the host-side geometric inputs.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>